--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "build": "tsc",
     "start": "node ./dist/index.js",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "migration:run": "ts-node-dev ./node_modules/typeorm/cli migration:run -d src/shared/infra/typeorm",
+    "migration:revert": "ts-node-dev ./node_modules/typeorm/cli migration:revert -d  src/shared/infra/typeorm",
+    "seed": "ts-node ./node_modules/typeorm-extension/dist/cli/index.js seed -d ./src/shared/infra/typeorm/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +19,7 @@
   "dependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "celebrate": "^15.0.1",
     "cors": "^2.8.5",
@@ -23,18 +27,24 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "joi": "^17.9.2",
     "morgan": "^1.10.0",
     "pg": "^8.11.1",
     "reflect-metadata": "^0.1.13",
     "signale": "^1.4.0",
+    "tsyringe": "^4.8.0",
     "typeorm": "^0.3.17",
-    "typeorm-extension": "^2.8.1"
+    "typeorm-extension": "^2.8.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/body-parser": "^1.19.2",
     "@types/morgan": "^1.9.4",
     "@types/node": "^20.4.1",
     "@types/signale": "^1.4.4",
+    "@types/uuid": "^9.0.2",
+    "jest": "^29.6.1",
     "nodemon": "^3.0.1",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
