--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "cross-env ts-node-dev --respawn index.ts",
+    "dev": "cross-env ts-node-dev --poll --inspect --transpile-only -r tsconfig-paths/register --ignore-watch --respawn index.ts",
     "build": "tsc",
     "start": "node ./dist/index.js",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli",
@@ -28,6 +28,7 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "joi": "^17.9.2",
+    "jsonwebtoken": "^9.0.1",
     "morgan": "^1.10.0",
     "pg": "^8.11.1",
     "reflect-metadata": "^0.1.13",
@@ -40,6 +41,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/body-parser": "^1.19.2",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/morgan": "^1.9.4",
     "@types/node": "^20.4.1",
     "@types/signale": "^1.4.4",
